--- a/index.html
+++ b/index.html
@@ -9,30 +9,42 @@
     <div class="container">
       <div class="jumbotron">
         <h1>Vacation Spots</h1>
-      </div>
+      </div> <!--jumbotron-->
       <div class="row">
-        <div class="col-lg-4">
-          <h1><a href="https://pt.wikipedia.org/wiki/Fortaleza"target="_blank">Praia Da Fortaleza</a></h1>
-          <p>
-            Está localizada no litoral Atlântico, a uma altitude média de dezesseis metros, com 34 km de praias. Fortaleza possui 314,930 km² de área e 2 609 716 habitantes estimados em 2016, além da maior densidade demográfica entre as capitais do país, com 8 286,6 hab/km². É a maior cidade do Ceará em população e a quinta do Brasil. A Região Metropolitana de Fortaleza é a sexta mais populosa do Brasil e a primeira do Norte e Nordeste, com 4 019 213 habitantes em 2016. É a cidade nordestina com a maior área de influência regional e possui a terceira maior rede urbana do Brasil em população, atrás apenas de São Paulo e do Rio de Janeiro.
-          </p>
-          <img src="img/beach-1.jpg" alt="Praia-da-Fortaleza"/>
-        </div>
-        <div class="col-lg-4">
-          <h1><a href="https://en.wikipedia.org/wiki/Fiji"target="_blank">Fiji Beach Resort</a></h1>
-          <p>
-            The majority of Fiji's islands were formed through volcanic activity starting around 150 million years ago. Today, some geothermal activity still occurs on the islands of Vanua Levu and Taveuni. Fiji has been inhabited since the second millennium BC, and was settled first by Austronesians and later by Melanesians, with some Polynesian influences. Europeans visited Fiji from the 17th century, and, after a brief period as an independent kingdom, the British established the Colony of Fiji in 1874. Fiji was a Crown colony until 1970, when it gained independence as a Commonwealth realm. A republic was declared in 1987, following a series of coups d'état.
-          </p>
-          <img src="img/beach-2.jpg" alt="Fiji-Beach-Resort"/>
-        </div>
-        <div class="col-lg-4">
-          <h1><a href="https://en.wikipedia.org/wiki/Grand_Canyon"target="_blank">The Grand Canyon</a></h1>
-          <p>
-            The Grand Canyon is 277 miles (446 km) long, up to 18 miles (29 km) wide and attains a depth of over a mile (6,093 feet or 1,857 meters). Nearly two billion years of Earth's geological history have been exposed as the Colorado River and its tributaries cut their channels through layer after layer of rock while the Colorado Plateau was uplifted. While some aspects about the history of incision of the canyon are debated by geologists, several recent studies support the hypothesis that the Colorado River established its course through the area about 5 to 6 million years ago. Since that time, the Colorado River has driven the down-cutting of the tributaries and retreat of the cliffs.
-          </p>
-          <img src="img/grand-canyon.jpg" alt="The Grand Canyon"/>
-        </div>
-      </div>
-    </div>
+        <div class="col-md-4">
+          <div class="panel-info">
+            <div class="panel-heading">
+              <h1 class="panel-title"><h1><a href="https://pt.wikipedia.org/wiki/Fortaleza"target="_blank">Praia Da Fortaleza</a></h1>
+              <p>
+                Está localizada no litoral Atlântico, a uma altitude média de dezesseis metros, com 34 km de praias. Fortaleza possui 314,930 km² de área e 2 609 716 habitantes estimados em 2016, além da maior densidade demográfica entre as capitais do país, com 8 286,6 hab/km². É a maior cidade do Ceará em população e a quinta do Brasil. A Região Metropolitana de Fortaleza é a sexta mais populosa do Brasil e a primeira do Norte e Nordeste, com 4 019 213 habitantes em 2016. É a cidade nordestina com a maior área de influência regional e possui a terceira maior rede urbana do Brasil em população, atrás apenas de São Paulo e do Rio de Janeiro.
+              </p>
+            </div> <!--panel-heading1-->
+              <img src="img/beach-1.jpg" alt="Praia-da-Fortaleza"/>
+          </div> <!--panel-info1-->
+        </div> <!--column1-->
+        <div class="col-md-4">
+          <div class="panel-info">
+            <div class="panel-heading">
+              <h1 class="panel-title"><h1><a href="https://en.wikipedia.org/wiki/Fiji"target="_blank">Fiji Beach Resort</a></h1>
+              <p>
+                The majority of Fiji's islands were formed through volcanic activity starting around 150 million years ago. Today, some geothermal activity still occurs on the islands of Vanua Levu and Taveuni. Fiji has been inhabited since the second millennium BC, and was settled first by Austronesians and later by Melanesians, with some Polynesian influences. Europeans visited Fiji from the 17th century, and, after a brief period as an independent kingdom, the British established the Colony of Fiji in 1874. Fiji was a Crown colony until 1970, when it gained independence as a Commonwealth realm. A republic was declared in 1987, following a series of coups d'état.
+              </p>
+            </div> <!--panel-heading2-->
+              <img src="img/beach-2.jpg" alt="Fiji-Beach-Resort"/>
+          </div> <!--panel-info2-->
+        </div> <!--column2-->
+
+        <div class="col-md-4">
+          <div class="panel-info">
+            <div class="panel-heading">
+              <h1 class="panel-title"><h1><a href="https://en.wikipedia.org/wiki/Grand_Canyon"target="_blank">The Grand Canyon</a></h1>
+              <p>
+                The Grand Canyon is 277 miles (446 km) long, up to 18 miles (29 km) wide and attains a depth of over a mile (6,093 feet or 1,857 meters). Nearly two billion years of Earth's geological history have been exposed as the Colorado River and its tributaries cut their channels through layer after layer of rock while the Colorado Plateau was uplifted. While some aspects about the history of incision of the canyon are debated by geologists, several recent studies support the hypothesis that the Colorado River established its course through the area about 5 to 6 million years ago. Since that time, the Colorado River has driven the down-cutting of the tributaries and retreat of the cliffs.
+              </p>
+            </div> <!--panel-heading3-->
+              <img src="img/grand-canyon.jpg" alt="The Grand Canyon"/>
+          </div> <!--panel-info3-->
+        </div> <!--column3-->
+    </div> <!--container-->
   </body>
 </html>
