--- a/index.html
+++ b/index.html
@@ -6,7 +6,53 @@
     <title>Vacation Spots</title>
   </head>
   <body>
-    <div class="container">
+    <div id="left-menu">
+      <ul>
+        <li> <a href="#">option</a></li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+        <li>option</li>
+      </ul>
+    </div>
+    <div class="container" id="main-body">
       <div class="jumbotron">
         <h1>Vacation Spots</h1>
       </div> <!--jumbotron-->
