--- a/index.html
+++ b/index.html
@@ -9,47 +9,38 @@
     <div id="left-menu">
       <ul>
         <li> <a href="#">option</a></li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
-        <li>option</li>
+        <li>Purchase</li>
+        <li>Inquire</li>
+        <li>Community</li>
+        <li>About</li>
+        <li>Purchase</li>
+        <li>Inquire</li>
+        <li>Community</li>
+        <li>About</li>
+        <li>Purchase</li>
+        <li>Inquire</li>
+        <li>Community</li>
+        <li>About</li>
+        <li>Purchase</li>
+        <li>Inquire</li>
+        <li>Community</li>
+        <li>About</li>
+        <li>Purchase</li>
+        <li>Inquire</li>
+        <li>Community</li>
+        <li>About</li>
+        <li>Purchase</li>
+        <li>Inquire</li>
+        <li>Community</li>
+        <li>About</li>
+        <li>Purchase</li>
+        <li>Inquire</li>
+        <li>Community</li>
+        <li>About</li>
+        <li>Purchase</li>
+        <li>Inquire</li>
+        <li>Community</li>
+        <li>About</li>
       </ul>
     </div>
     <div class="container" id="main-body">
