--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="left-menu">
       <ul>
-        <li> <a href="#">option</a></li>
+        <li> <a href="#">About</a></li>
         <li>Purchase</li>
         <li>Inquire</li>
         <li>Community</li>
